Fix compiler warnings in Java 11
Signed-off-by: Tadaya Tsuyukubo <tadaya@ttddyy.net>